--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,12 @@
 
 
-
 {
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "bliss/wsgi.py"
-        }
-    ]
+  "version": 2,
+  "routes": [
+    { "handle": "filesystem" }, 
+    { 
+      "src": "/(.*)", 
+      "dest": "/bliss.wsgi" 
+    }
+  ]
 }
