--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
 {
   "rewrites": [
-    { "src": "/admin/(.*)", "dest": "/admin/$1" },
-    { "src": "/register/(.*)", "dest": "/register/$1" },
-    { "src": "/logout/(.*)", "dest": "/logout/$1" },
-    { "src": "/home/(.*)", "dest": "/home/$1" },
-    { "src": "/myprofile-lg/(.*)", "dest": "/myprofile-lg/$1" },
-    { "src": "/search/(.*)", "dest": "/search/$1" },
-    { "src": "/blogs/(.*)", "dest": "/blogs/$1" },
-    { "src": "/news/(.*)", "dest": "/news/$1" },
-    { "src": "/sports/(.*)", "dest": "/sports/$1" },
-    { "src": "/content/(.*)", "dest": "/content/$1" },
-    { "src": "/content0/(.*)", "dest": "/content0/$1" },
-    { "src": "/events/(.*)", "dest": "/events/$1" },
-    { "src": "/(.*)", "dest": "/" }
+    { "source": "/admin/(.*)", "destination": "/admin/$1" },
+    { "source": "/register/(.*)", "destination": "/register/$1" },
+    { "source": "/logout/(.*)", "destination": "/logout/$1" },
+    { "source": "/home/(.*)", "destination": "/home/$1" },
+    { "source": "/myprofile-lg/(.*)", "destination": "/myprofile-lg/$1" },
+    { "source": "/search/(.*)", "destination": "/search/$1" },
+    { "source": "/blogs/(.*)", "destination": "/blogs/$1" },
+    { "source": "/news/(.*)", "destination": "/news/$1" },
+    { "source": "/sports/(.*)", "destination": "/sports/$1" },
+    { "source": "/content/(.*)", "destination": "/content/$1" },
+    { "source": "/content0/(.*)", "destination": "/content0/$1" },
+    { "source": "/events/(.*)", "destination": "/events/$1" },
+    { "source": "/(.*)", "destination": "/" }
   ]
 }
